// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Handle adminCreateUser bad data 1`] = `"UnkownCognitoError"`;

exports[`Handle adminCreateUser unknown error 1`] = `[Error: UNKNOWN ADMINCREATEUSER ERROR]`;

exports[`Handle crudSdk.CreateAdminUser error: adminDeleteUser parameters 1`] = `
Array [
  Object {
    "UserPoolId": "USER_POOL_ID",
    "Username": "GENERATED_USERNAME",
  },
]
`;

exports[`Handle crudSdk.CreateAdminUser error: result 1`] = `
Object {
  "code": "UnknownError",
  "message": "\\"crudSdk.CreateAdminUser ERROR\\"",
}
`;

exports[`Handle listUser returns bad data 1`] = `"UnkownCognitoError"`;

exports[`Handle listUser unknown error 1`] = `[Error: UNKNOWN LISTUSERS ERROR]`;

exports[`Handle multiple users found error 1`] = `
Object {
  "code": "DatabaseError",
  "message": "Something bad happened, more users found with the provided data",
}
`;

exports[`Handle the good case 1`] = `"GENERATED_USERNAME"`;

exports[`Handle the good case: CreateAdminUser parameters 1`] = `
Array [
  Object {
    "input": Object {
      "email": "a@a.hu",
      "id": "GENERATED_USERNAME",
      "name": "Test Elek",
      "phone": "+123456789",
    },
  },
]
`;

exports[`Handle the good case: adminCreateUser parameters 1`] = `
Array [
  Object {
    "DesiredDeliveryMediums": Array [
      "EMAIL",
    ],
    "UserAttributes": Array [
      Object {
        "Name": "email",
        "Value": "a@a.hu",
      },
      Object {
        "Name": "phone_number",
        "Value": "+123456789",
      },
      Object {
        "Name": "name",
        "Value": "Test Elek",
      },
    ],
    "UserPoolId": "USER_POOL_ID",
    "Username": "GENERATED_USERNAME",
  },
]
`;

exports[`Handle the good case: listUsers parameters 1`] = `
Array [
  Object {
    "AttributesToGet": Array [
      "email",
      "phone_number",
    ],
    "Filter": "email = \\"a@a.hu\\"",
    "Limit": 2,
    "UserPoolId": "USER_POOL_ID",
  },
]
`;

exports[`Handle user already exists error 1`] = `
Object {
  "code": "UserAlreadyExists",
  "message": "User already exists",
}
`;
